--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,11 @@
 # Include the README
 include *.rst
+
 # Include the license file
 include LICENSE
+
+# Include the changelog
+include CHANGES.txt
+
+# Include conf file
+include cryodrgn/protocols.conf
