--- a/cryodrgn/protocols.conf
+++ b/cryodrgn/protocols.conf
@@ -1,15 +1,4 @@
 [PROTOCOLS]
-Protocols SPA = [
-  {"tag": "section", "text": "3D", "children": [
-    {"tag": "protocol_group", "text": "Analysis", "openItem": "False", "children": [
-      {"tag": "section", "text": "Heterogeneity", "openItem": "False", "children": [
-        {"tag": "protocol", "value": "CryoDrgnProtPreprocess", "text": "default"},
-        {"tag": "protocol", "value": "CryoDrgnProtTrain", "text": "default"},
-        {"tag": "protocol", "value": "CryoDrgnProtAbinitio", "text": "default"},
-
-      ]}
-    ]}
-  ]}
 Flexibility Hub = [
     {"tag": "section", "text": "Data preparation", "children": [
     ]},
@@ -26,6 +15,7 @@ Flexibility Hub = [
 	]},
 	{"tag": "section", "text": "Data analysis", "children": [
 	    {"tag": "protocol_group", "text": "CryoDRGN", "openItem": "False", "children": [
+	        {"tag": "protocol", "value": "CryoDrgnProtAnalyze", "text": "default"}
 	    ]},
     ]},
     {"tag": "section", "text": "Map reconstruction", "children": [
