fix workflow branch

--- a/.github/workflows/publish_and_tag.yml
+++ b/.github/workflows/publish_and_tag.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   call-publish-workflow:
-    uses: scipion-em/.github/.github/workflows/publish_and_tag.yml@test
+    uses: scipion-em/.github/.github/workflows/publish_and_tag.yml@master
     with:
       folder: cryodrgn
     secrets: inherit
