update installer, fix possible outputs, add new subset protocol

--- a/cryodrgn/protocols.conf
+++ b/cryodrgn/protocols.conf
@@ -15,7 +15,8 @@ Flexibility Hub = [
 	]},
 	{"tag": "section", "text": "Data analysis", "children": [
 	    {"tag": "protocol_group", "text": "CryoDRGN", "openItem": "False", "children": [
-	        {"tag": "protocol", "value": "CryoDrgnProtAnalyze", "text": "default"}
+	        {"tag": "protocol", "value": "CryoDrgnProtAnalyze", "text": "default"},
+            {"tag": "protocol", "value": "CryoDrgnProtSubset", "text": "default"}
 	    ]}
     ]},
     {"tag": "section", "text": "Map reconstruction", "children": [
